Adding workiing code.

--- a/server/parent/pom.xml
+++ b/server/parent/pom.xml
@@ -46,6 +46,7 @@
 	</properties>
 	<modules>
 		<module>../config</module>
+		<module>../resources</module>
 		<module>../common</module>
 		<module>../dao</module>
 		<module>../services</module>				
