--- a/server/dao/pom.xml
+++ b/server/dao/pom.xml
@@ -84,7 +84,7 @@
 			<version>3.1.0.RELEASE</version>
 		</dependency>
 		<dependency>
-			<groupId>com.paypal.psc.rs</groupId>
+			<groupId>com.hackathon</groupId>
 			<artifactId>common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
