--- a/server/services/pom.xml
+++ b/server/services/pom.xml
@@ -22,12 +22,12 @@
 			<version>${spring.framework.version}</version>
 		</dependency>	
 		<dependency>
-			<groupId>com.paypal.psc.rs</groupId>
+			<groupId>com.hackathon</groupId>
 			<artifactId>dao</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>com.paypal.psc.rs</groupId>
+			<groupId>com.hackathon</groupId>
 			<artifactId>common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
